[package]
name = "executables"
version = "0.2.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"
description = "list all executables found in PATH on unix systems"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
